Blue/teal flame icon matching brand

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 <div class="header">
   <div class="header-brand">
-    <div class="header-logo">🔥</div>
+    <div class="header-logo"><svg width="28" height="28" viewBox="0 0 24 24" fill="none"><path d="M12 2C12 2 7 8 7 13C7 16.87 9.24 19 12 19C14.76 19 17 16.87 17 13C17 8 12 2 12 2Z" fill="url(#flame)"/><path d="M12 9C12 9 9.5 12.5 9.5 15C9.5 16.93 10.57 18 12 18C13.43 18 14.5 16.93 14.5 15C14.5 12.5 12 9 12 9Z" fill="url(#inner)"/><defs><linearGradient id="flame" x1="12" y1="2" x2="12" y2="19"><stop offset="0%" stop-color="#60E0D0"/><stop offset="100%" stop-color="#2EC4B6"/></linearGradient><linearGradient id="inner" x1="12" y1="9" x2="12" y2="18"><stop offset="0%" stop-color="#B8F0EA"/><stop offset="100%" stop-color="#60E0D0"/></linearGradient></defs></svg></div>
     <div>
       <div class="header-title"><span class="forge">FORGE</span> <span class="health">HEALTH</span></div>
       <div class="header-subtitle">Daily Intelligence Briefing</div>
